added some styling to login component and future hamburger menu for application

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,3 +6,9 @@
 
 /* Variables */
 @import './var';
+
+/* Login Component */
+@import './login.scss';
+
+/* Sidebar component */
+@import './sidebar.scss';
