--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -5,4 +5,8 @@ html {
 .logo {
     font-family: 'Shrikhand', cursive;
     font-size: 10rem;
+    color: white;
+    -webkit-text-stroke-width: 5px;
+    -webkit-text-stroke-color: #111;
+    text-shadow: 2px 6px #007fb9;
 }
