--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -1,5 +1,5 @@
 .login-component {
-    margin-top: 30rem;
+    margin-top: 15rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,6 +8,8 @@
 
 .login-banner {
     font-size: 5rem;
+    font-family: 'Berkshire Swash', cursive;
+    color: whitesmoke;
 }
 
 .login-form {
