--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -32,18 +32,28 @@
     border: 2px solid rgba(0, 0, 0, 0.233);
     box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.15);
     color: white;
+
+
 }
 
 .login-form input {
     width: 90%;
     margin-bottom: 1rem;
-    font-size: 1rem;
-    line-height: 2rem;
+    font-size: 2rem;
+    line-height: 3rem;
     box-sizing: border-box;
     border: 1px solid rgba(255, 255, 255, 0.281);
     background-color: rgba(255, 255, 255, 0.219);
     font-weight: bold;
     color: white;
+    margin: 1rem;
+}
+
+.login-title {
+    font-size: 4rem;
+    margin-bottom: 2rem;
+    font-family: 'Berkshire Swash', cursive;
+    color: rgba(255, 255, 255, 0.65);
 }
 
 .login-form input::placeholder {
@@ -58,13 +68,28 @@
     border-radius: 6px;
     border: 2px solid white;
     color: #ffffff !important;
+    width: 90%;
     font-weight: bold;
     font-family: sans-serif;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     cursor: pointer;
     text-align: center;
     transition: background 250ms ease-in-out, transform 150ms ease;
     justify-self: flex-end;
+    margin: 3rem 0;
+}
+
+.signup {
+    margin-top: 9rem;
+    font-size: 2rem;
+    font-family: 'Berkshire Swash', cursive;
+    color: rgba(255, 255, 255, 0.55);
+}
+
+.signup-link {
+    margin-left: 1rem;
+    text-decoration: none;
+    color: rgba(0, 174, 255, 0.55);
 }
 
 .error {
