--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -13,6 +13,7 @@
 }
 
 .login-form {
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,10 +21,6 @@
     width: 500px;
     height: 500px;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background: linear-gradient(210deg,
             #0400ff9d 0%,
             #0043d3 40.13%,
