Working on Dashboard

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,5 +10,11 @@
 /* Login Component */
 @import './login.scss';
 
-/* Sidebar component */
-@import './sidebar.scss';
+/* Nav component */
+@import './nav.scss';
+
+/* Tickets */
+@import './tickets.scss';
+
+/* Dashboard */
+@import './dashboard.scss';
