--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -10,3 +10,12 @@ html {
     -webkit-text-stroke-color: #111;
     text-shadow: 2px 6px #007fb9;
 }
+
+.logo-alt {
+    font-family: 'Shrikhand', cursive;
+    font-size: 5rem;
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: #111;
+    text-shadow: 2px 6px #007fb9;
+}
