--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -18,4 +18,5 @@ html {
     -webkit-text-stroke-width: 3px;
     -webkit-text-stroke-color: #111;
     text-shadow: 2px 6px #007fb9;
+    margin-right: 2rem;
 }
