--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,11 +1,11 @@
 .navbar {
     display: flex;
-    justify-content: center;
     align-items: center;
     top: 0;
     height: 70px;
     width: 100%;
     background-color: #666;
+    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.2), 0 5px 20px 0 rgba(0, 0, 0, 0.15);
 
     .logo-icon {
         display: flex;
@@ -22,5 +22,11 @@
         text-decoration: none;
         color: #333;
         border: 1px solid red;
+    }
+
+    .wb-user {
+        font-size: 4rem;
+        font-weight: bold;
+        color: #007fb9;
     }
 }
