--- a/src/scss/tickets.scss
+++ b/src/scss/tickets.scss
@@ -2,28 +2,41 @@
     margin: 2rem 0;
     display: flex;
     flex-direction: column;
-    background-color: rgba(255, 255, 255, 0.404);
     width: 40%;
-    border: 5px solid #222;
-}
+    border: 2px solid red;
 
-.ticket {
-    background: linear-gradient(210deg,
-            #0400ff9d 0%,
-            #0043d3 40.13%,
-            #007fb9 90%);
-    width: 80%;
-    border-radius: 10px;
-    border: 2px solid white;
-    margin: 2rem 2rem;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-evenly;
-}
+    .tickets-title {
+        font-family: 'Atomic Age', cursive;
+        font-size: 8rem;
+        color: #007fb9;
+        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-color: #111;
+        text-shadow: 3px 5px rgba(255, 255, 255, 0.65);
+        margin-bottom: 1rem;
+    }
 
-.ticket h1 {
-    font-size: 2rem;
-    font-weight: bold;
-    margin: 0rem 1rem;
-    color: rgba(245, 245, 245, 0.70);
+    .ticket {
+        border: 1px solid red;
+        display: flex;
+        width: 100%;
+        background: linear-gradient(210deg,
+                #0400ff9d 0%,
+                #0043d3 40.13%,
+                #007fb9 90%);
+    }
+
+    .ticket h1 {
+        font-size: 2rem;
+        font-weight: bold;
+        margin: 0rem 1rem;
+        color: rgba(245, 245, 245, 0.70);
+    }
+
+    .ticket-item {
+        width: 200px;
+        border: 2px solid white;
+        padding: 1rem;
+        display: flex;
+        justify-content: space-evenly;
+    }
 }
