Working on Dashboard, yogurt break

--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -22,7 +22,7 @@
     height: 500px;
     text-align: center;
     background: linear-gradient(210deg,
-            #0400ff9d 0%,
+            #007fb9 0%,
             #0043d3 40.13%,
             #007fb9 90%);
     border-radius: 10px;
