--- a/src/scss/tickets.scss
+++ b/src/scss/tickets.scss
@@ -1,9 +1,11 @@
 .tickets {
-    margin: 2rem 0;
+    margin: 2rem;
     display: flex;
     flex-direction: column;
     width: 40%;
-    border: 2px solid red;
+    padding: 1rem;
+    border-radius: 10px;
+    border: 2px solid rgba(255, 255, 255, 0.65);
 
     .tickets-title {
         font-family: 'Atomic Age', cursive;
@@ -16,13 +18,8 @@
     }
 
     .ticket {
-        border: 1px solid red;
         display: flex;
         width: 100%;
-        background: linear-gradient(210deg,
-                #0400ff9d 0%,
-                #0043d3 40.13%,
-                #007fb9 90%);
     }
 
     .ticket h1 {
