working on sign-up to create a new user

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,6 +10,9 @@
 /* Login Component */
 @import './login.scss';
 
+/* Add User Component */
+@import './adduser.scss';
+
 /* Nav component */
 @import './nav.scss';
 
