--- a/src/scss/adduser.scss
+++ b/src/scss/adduser.scss
@@ -1,25 +1,22 @@
-.login-component {
-    margin-top: 2rem;
+.signup-component {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
-.login-banner {
-    font-size: 5rem;
-    font-family: 'Berkshire Swash', cursive;
-    color: whitesmoke;
+.signup-content {
+    margin-right: 3rem;
 }
 
-.login-form {
+.signup-form {
     margin-top: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 500px;
-    height: 500px;
+    height: 425px;
     text-align: center;
     background: linear-gradient(210deg,
             #0400ff9d 0%,
@@ -31,7 +28,7 @@
     color: white;
 }
 
-.login-form input {
+.signup-form input {
     width: 90%;
     margin-bottom: 1rem;
     font-size: 2rem;
@@ -44,25 +41,25 @@
     margin: 1rem;
 }
 
-.login-title {
+.signup-title {
     font-size: 4rem;
     margin-bottom: 2rem;
     font-family: 'Berkshire Swash', cursive;
     color: rgba(255, 255, 255, 0.65);
 }
 
-.login-form input::placeholder {
+.signup-form input::placeholder {
     color: rgba(255, 255, 255, 0.555);
 }
 
-.login-form button {
+.signup-form button {
     border: none;
     padding: 0.2rem 2rem;
     text-decoration: none;
     background: rgba(255, 255, 255, 0.219);
     border-radius: 6px;
     border: 2px solid white;
-    color: #ffffff !important;
+    color: #ffffff;
     width: 90%;
     font-weight: bold;
     font-family: sans-serif;
@@ -74,17 +71,15 @@
     margin: 3rem 0;
 }
 
-.signup {
-    margin-top: 9rem;
-    font-size: 2rem;
-    font-family: 'Berkshire Swash', cursive;
-    color: rgba(255, 255, 255, 0.55);
-}
-
-.signup-link {
-    margin-left: 1rem;
-    text-decoration: none;
-    color: rgba(0, 174, 255, 0.55);
+.signup-form select {
+    margin: 2rem 0;
+    color: #ffffff;
+    width: 90%;
+    font-family: sans-serif;
+    font-size: 2.5rem;
+    border-radius: 6px;
+    border: 2px solid white;
+    background: rgba(255, 255, 255, 0.219);
 }
 
 .error {
@@ -94,4 +89,27 @@
     margin: 1rem 0;
     border-radius: 10px;
     font-size: 2rem;
+}
+
+.login-link {
+    margin-top: 3rem;
+    text-decoration: none;
+    color: rgba(0, 174, 255, 0.55);
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    float: right;
+}
+
+.login-text {
+    font-size: 4rem;
+    color: rgba(255, 255, 255, 0.35);
+    font-family: 'Berkshire Swash', cursive;
+}
+
+.back-arr {
+    font-size: 8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
