added logout button on dashboard

--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -22,7 +22,7 @@
         font-size: 5rem;
         text-decoration: none;
         color: #333;
-        border-left: 3px solid #333;
+        border-right: 3px solid #333;
     }
 
     .wb-user {
@@ -33,5 +33,11 @@
 
     .icons-container {
         display: flex;
+    }
+
+    .logout-icons {
+        margin: 0 2rem;
+        border: none;
+        color: #007fb9;
     }
 }
