--- a/src/scss/users.scss
+++ b/src/scss/users.scss
@@ -2,9 +2,12 @@
     margin: 1rem;
 }
 .users-list {
-    padding: 1rem;
+    // margin-top: 3rem;
+    padding-top: 400px;
     // color: whitesmoke
+    padding-left: 500px;
 }
+
 .users {
     display: flex;
     // justify-content: space-evenly;
@@ -12,6 +15,7 @@
     width: 1000px;
     padding: 1rem;
     overflow: scroll;
+    // color: white;
 }
 .users-title {
     display: flex;
@@ -25,7 +29,7 @@
     flex-direction: column;
     font-size: 2rem;
     // border: 1px solid black;
-    color: white;
+    // color: white;
     // overflow: auto;
     padding: 1rem;
 }
