--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,5 +1,5 @@
 html {
-    background-color: #333;
+    background: #333;
 }
 
 .logo {
@@ -8,7 +8,6 @@ html {
     color: white;
     -webkit-text-stroke-width: 5px;
     -webkit-text-stroke-color: #111;
-    text-shadow: 2px 6px #007fb9;
 }
 
 .logo-alt {
