--- a/src/scss/tickets.scss
+++ b/src/scss/tickets.scss
@@ -2,7 +2,7 @@
     margin: 2rem;
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 50%;
     padding: 1rem;
     border-radius: 10px;
     border: 2px solid rgba(255, 255, 255, 0.65);
@@ -30,10 +30,11 @@
     }
 
     .ticket-item {
-        width: 200px;
+        width: 25%;
         border: 2px solid white;
         padding: 1rem;
         display: flex;
         justify-content: space-evenly;
+        text-align: center;
     }
 }
