--- a/src/scss/adduser.scss
+++ b/src/scss/adduser.scss
@@ -1,6 +1,33 @@
 .signup-bg {
     height: 100vh;
-    background: linear-gradient(52deg, rgba(163, 163, 163, 0.09) 0%, rgba(163, 163, 163, 0.09) 33.3%, rgba(100, 100, 100, 0.09) 33.3%, rgba(100, 100, 100, 0.09) 66.6%, rgba(162, 162, 162, 0.09) 66.6%, rgba(162, 162, 162, 0.09) 99%), linear-gradient(258deg, rgba(193, 193, 193, 0.06) 0%, rgba(193, 193, 193, 0.06) 33.3%, rgba(169, 169, 169, 0.06) 33.3%, rgba(169, 169, 169, 0.06) 66.6%, rgba(92, 92, 92, 0.06) 66.6%, rgba(92, 92, 92, 0.06) 99%), linear-gradient(129deg, rgba(45, 45, 45, 0.03) 0%, rgba(45, 45, 45, 0.03) 33.3%, rgba(223, 223, 223, 0.03) 33.3%, rgba(223, 223, 223, 0.03) 66.6%, rgba(173, 173, 173, 0.03) 66.6%, rgba(173, 173, 173, 0.03) 99%), linear-gradient(280deg, rgba(226, 226, 226, 0.06) 0%, rgba(226, 226, 226, 0.06) 33.3%, rgba(81, 81, 81, 0.06) 33.3%, rgba(81, 81, 81, 0.06) 66.6%, rgba(186, 186, 186, 0.06) 66.6%, rgba(186, 186, 186, 0.06) 99%), linear-gradient(85deg, rgba(225, 225, 225, 0.04) 0%, rgba(225, 225, 225, 0.04) 33.3%, rgba(95, 95, 95, 0.04) 33.3%, rgba(95, 95, 95, 0.04) 66.6%, rgba(39, 39, 39, 0.04) 66.6%, rgba(39, 39, 39, 0.04) 99%), linear-gradient(128deg, rgba(184, 184, 184, 0.06) 0%, rgba(184, 184, 184, 0.06) 33.3%, rgba(0, 0, 0, 0.06) 33.3%, rgba(0, 0, 0, 0.06) 66.6%, rgba(140, 140, 140, 0.06) 66.6%, rgba(140, 140, 140, 0.06) 99.89999999999999%), linear-gradient(323deg, rgba(40, 40, 40, 0.07) 0%, rgba(40, 40, 40, 0.07) 33.3%, rgba(214, 214, 214, 0.07) 33.3%, rgba(214, 214, 214, 0.07) 66.6%, rgba(190, 190, 190, 0.07) 66.6%, rgba(190, 190, 190, 0.07) 99.89999999999999%), linear-gradient(61deg, rgba(230, 230, 230, 0) 0%, rgba(230, 230, 230, 0) 33.3%, rgba(241, 241, 241, 0) 33.3%, rgba(241, 241, 241, 0) 66.6%, rgba(55, 55, 55, 0) 66.6%, rgba(55, 55, 55, 0) 99%), linear-gradient(0deg, #2625e3, #0bbaef)
+    background: linear-gradient(52deg, rgba(163, 163, 163, 0.09) 0%,
+            rgba(163, 163, 163, 0.09) 33.3%,
+            rgba(100, 100, 100, 0.09) 33.3%, rgba(100, 100, 100, 0.09) 66.6%,
+            rgba(162, 162, 162, 0.09) 66.6%, rgba(162, 162, 162, 0.09) 99%),
+        linear-gradient(258deg, rgba(193, 193, 193, 0.06) 0%,
+            rgba(193, 193, 193, 0.06) 33.3%, rgba(169, 169, 169, 0.06) 33.3%,
+            rgba(169, 169, 169, 0.06) 66.6%, rgba(92, 92, 92, 0.06) 66.6%,
+            rgba(92, 92, 92, 0.06) 99%), linear-gradient(129deg, rgba(45, 45, 45, 0.03) 0%,
+            rgba(45, 45, 45, 0.03) 33.3%, rgba(223, 223, 223, 0.03) 33.3%,
+            rgba(223, 223, 223, 0.03) 66.6%, rgba(173, 173, 173, 0.03) 66.6%,
+            rgba(173, 173, 173, 0.03) 99%), linear-gradient(280deg,
+            rgba(226, 226, 226, 0.06) 0%, rgba(226, 226, 226, 0.06) 33.3%,
+            rgba(81, 81, 81, 0.06) 33.3%, rgba(81, 81, 81, 0.06) 66.6%,
+            rgba(186, 186, 186, 0.06) 66.6%, rgba(186, 186, 186, 0.06) 99%),
+        linear-gradient(85deg, rgba(225, 225, 225, 0.04) 0%,
+            rgba(225, 225, 225, 0.04) 33.3%, rgba(95, 95, 95, 0.04) 33.3%,
+            rgba(95, 95, 95, 0.04) 66.6%, rgba(39, 39, 39, 0.04) 66.6%,
+            rgba(39, 39, 39, 0.04) 99%), linear-gradient(128deg,
+            rgba(184, 184, 184, 0.06) 0%, rgba(184, 184, 184, 0.06) 33.3%,
+            rgba(0, 0, 0, 0.06) 33.3%, rgba(0, 0, 0, 0.06) 66.6%,
+            rgba(140, 140, 140, 0.06) 66.6%, rgba(140, 140, 140, 0.06) 99.89999999999999%),
+        linear-gradient(323deg, rgba(40, 40, 40, 0.07) 0%, rgba(40, 40, 40, 0.07) 33.3%,
+            rgba(214, 214, 214, 0.07) 33.3%, rgba(214, 214, 214, 0.07) 66.6%,
+            rgba(190, 190, 190, 0.07) 66.6%, rgba(190, 190, 190, 0.07) 99.89999999999999%),
+        linear-gradient(61deg, rgba(230, 230, 230, 0) 0%, rgba(230, 230, 230, 0) 33.3%,
+            rgba(241, 241, 241, 0) 33.3%, rgba(241, 241, 241, 0) 66.6%,
+            rgba(55, 55, 55, 0) 66.6%, rgba(55, 55, 55, 0) 99%),
+        linear-gradient(0deg, rgba(4, 0, 255, 0.6), rgba(0, 174, 255, 0.8))
 }
 
 .signup-component {
@@ -29,7 +56,7 @@
     .login-link {
         margin-top: 3rem;
         text-decoration: none;
-        color: rgba(0, 174, 255, 0.55);
+        color: #00aeff;
         font-weight: bold;
         display: flex;
         align-items: center;
@@ -59,7 +86,7 @@
         height: 425px;
         text-align: center;
         background: linear-gradient(210deg,
-                #0400ff9d 0%,
+                #0400ff 0%,
                 #0043d3 40.13%,
                 #007fb9 90%);
         border-radius: 10px;
