--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -7,7 +7,7 @@
         linear-gradient(135deg, rgba(84, 84, 84, 0.06) 0%, rgba(84, 84, 84, 0.06) 51%, rgba(165, 165, 165, 0.06) 51%, rgba(165, 165, 165, 0.06) 100%),
         linear-gradient(45deg, rgba(15, 15, 15, 0.02) 0%, rgba(15, 15, 15, 0.02) 14%, rgba(95, 95, 95, 0.02) 14%, rgba(95, 95, 95, 0.02) 100%),
         linear-gradient(0deg, rgba(34, 34, 34, 0.05) 0%, rgba(34, 34, 34, 0.05) 58%, rgba(98, 98, 98, 0.05) 58%, rgba(98, 98, 98, 0.05) 100%),
-        linear-gradient(90deg, rgb(2, 110, 165), rgb(50, 216, 218))
+        linear-gradient(90deg, rgba(4, 0, 255, 0.6), rgba(0, 174, 255, 0.8))
 }
 
 .login-component {
@@ -22,7 +22,7 @@
     .login-banner {
         font-size: 5rem;
         font-family: 'Berkshire Swash', cursive;
-        color: whitesmoke;
+        color: rgba(255, 255, 255, 0.4);
     }
 
     .login-title {
@@ -42,7 +42,7 @@
         height: 500px;
         text-align: center;
         background: linear-gradient(210deg,
-                #0400ff9d 0%,
+                #0400ff 0%,
                 #0043d3 40.13%,
                 #007fb9 90%);
         border-radius: 10px;
