--- a/src/scss/tickets.scss
+++ b/src/scss/tickets.scss
@@ -6,6 +6,8 @@
     padding: 1rem;
     border-radius: 10px;
     border: 2px solid rgba(255, 255, 255, 0.65);
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: inset 0 0 15px #000000;
 
     .tickets-title {
         font-family: 'Atomic Age', cursive;
