tickets inset style

--- a/src/scss/adduser.scss
+++ b/src/scss/adduser.scss
@@ -56,7 +56,7 @@
     .login-link {
         margin-top: 3rem;
         text-decoration: none;
-        color: #00aeff;
+        color: rgba(0, 174, 255, 0.60);
         font-weight: bold;
         display: flex;
         align-items: center;
