--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -34,9 +34,11 @@
         background: none;
         border: none;
         border-bottom: 1px solid #007fb9;
-        width: 400px;
+        width: 900px;
         font-size: 4rem;
         color: white;
+        font-family: 'Shrikhand', cursive;
+
     }
 
     .form-group input::placeholder {
