--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -75,7 +75,7 @@
         background: rgba(255, 255, 255, 0.219);
         border-radius: 6px;
         border: 2px solid white;
-        color: #ffffff !important;
+        color: #ffffff;
         width: 90%;
         font-weight: bold;
         font-family: sans-serif;
