added comments to files

--- a/src/scss/users.scss
+++ b/src/scss/users.scss
@@ -59,3 +59,14 @@
         font-size: 3rem;
     }
 }
+.page-number {
+    display: flex;
+    // justify-content: space-evenly;
+    font-size: 3rem;
+    padding: 0rem 2.5rem;
+    color: white;
+
+    :hover {
+        cursor: pointer
+    }
+}
