--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -12,15 +12,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-
-    .step {
-        font-family: 'Atomic Age', cursive;
-        font-size: 4rem;
-        color: #007fb9;
-        font-weight: bold;
-        margin-left: 1rem;
-        align-self: flex-start;
-    }
+    width: 50%;
 
     .form-group {
         margin: 0 2rem;
@@ -68,6 +60,6 @@
         border: none;
         font-size: 3rem;
         color: #007fb9;
-        margin-left: 1rem;
+        margin-left: 4rem;
     }
 }
