added pagination to tickets list

--- a/src/scss/tickets.scss
+++ b/src/scss/tickets.scss
@@ -40,3 +40,13 @@
         text-align: center;
     }
 }
+.page-link {
+    font-size: 2.5rem;
+    margin: 2rem 2rem 0 1rem;
+    border: 4px unset white;
+    padding: 1rem;
+    cursor: pointer;
+    color: #007fb9;
+    background: rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
