--- a/src/scss/tickets.scss
+++ b/src/scss/tickets.scss
@@ -40,6 +40,7 @@
         text-align: center;
     }
 }
+
 .page-link {
     font-size: 2.5rem;
     margin: 2rem 2rem 0 1rem;
@@ -49,4 +50,17 @@
     color: #007fb9;
     background: rgba(0, 0, 0, 0.2);
     text-align: center;
+}
+
+.st-card {
+    border: 1px solid red;
+    border-radius: 8px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+
+    h1 {
+        color: red;
+        font-size: 5rem;
+    }
 }
