--- a/src/scss/tickets.scss
+++ b/src/scss/tickets.scss
@@ -41,26 +41,58 @@
     }
 }
 
-.page-link {
-    font-size: 2.5rem;
-    margin: 2rem 2rem 0 1rem;
-    border: 4px unset white;
+.enumerate-tickets {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
     padding: 1rem;
-    cursor: pointer;
-    color: #007fb9;
-    background: rgba(0, 0, 0, 0.2);
-    text-align: center;
+
+    .page-link {
+        font-size: 2.5rem;
+        margin: 1rem 2rem;
+        border: 4px unset white;
+        padding: 1rem;
+        cursor: pointer;
+        color: #007fb9;
+        background: rgba(0, 0, 0, 0.2);
+        text-align: center;
+        border-radius: 8px;
+        width: 50px;
+        border: 3px solid rgba(255, 255, 255, 0.4);
+    }
 }
 
-.st-card {
-    border: 1px solid red;
-    border-radius: 8px;
-    width: 400px;
-    display: flex;
-    flex-direction: column;
+.st-bg {
+    height: 100vh;
+    background: linear-gradient(135deg, rgb(11, 45, 126) 0%, rgb(11, 45, 126) 44%, rgb(21, 87, 153) 44%, rgb(21, 87, 153) 45%, rgb(30, 129, 181) 45%, rgb(30, 129, 181) 61%, rgb(40, 170, 208) 61%, rgb(40, 170, 208) 67%, rgb(49, 212, 235) 67%, rgb(49, 212, 235) 100%);
 
-    h1 {
-        color: red;
-        font-size: 5rem;
+    .st-card {
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 10px solid rgba(255, 255, 255, 0.459);
+        border-radius: 12px;
+        min-width: 800px;
+        min-height: 500px;
+        display: flex;
+        flex-direction: column;
+        background-color: rgba(0, 126, 185, 0.8);
+
+        h1 {
+            color: white;
+            font-size: 5rem;
+        }
+
+        .top-content {
+            border-bottom: 1px solid white;
+            padding: 1rem;
+        }
+
+        .bottom-content {
+            padding: 1rem;
+        }
     }
 }
