--- a/src/scss/users.scss
+++ b/src/scss/users.scss
@@ -98,9 +98,7 @@
     .su-card {
         text-align: center;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        margin: 3rem;
         border: 10px solid rgba(255, 255, 255, 0.459);
         border-radius: 12px;
         min-width: 500px;
