--- a/src/scss/users.scss
+++ b/src/scss/users.scss
@@ -114,5 +114,41 @@
             font-size: 5rem;
             margin: 1rem;
         }
+
+        select {
+            margin: 1rem 0;
+            color: #ffffff;
+            width: 90%;
+            font-family: sans-serif;
+            font-size: 2.5rem;
+            border-radius: 6px;
+            border: 2px solid white;
+            background: rgba(255, 255, 255, 0.219);
+        }
+
+        button {
+            border: none;
+            padding: 0.2rem 2rem;
+            text-decoration: none;
+            background: rgba(255, 255, 255, 0.219);
+            border-radius: 6px;
+            border: 2px solid white;
+            color: #ffffff;
+            width: 90%;
+            font-weight: bold;
+            font-family: sans-serif;
+            font-size: 2.5rem;
+            cursor: pointer;
+            text-align: center;
+            transition: background 250ms ease-in-out, transform 150ms ease;
+            justify-self: flex-end;
+            margin: 1.5rem;
+        }
+
+        .delete {
+            font-size: 6rem;
+            color: white;
+            margin: 1rem 0;
+        }
     }
 }
