--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -61,3 +61,9 @@ html {
     text-shadow: 2px 6px #00aeff;
     margin-right: 2rem;
 }
+
+.delete {
+    font-size: 6rem;
+    color: white;
+    margin: 1rem 0;
+}
