--- a/src/scss/users.scss
+++ b/src/scss/users.scss
@@ -98,9 +98,7 @@
     .su-card {
         text-align: center;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        margin: 3rem;
         border: 10px solid rgba(255, 255, 255, 0.459);
         border-radius: 12px;
         min-width: 500px;
@@ -115,6 +113,36 @@
             color: white;
             font-size: 5rem;
             margin: 1rem;
+        }
+
+        select {
+            margin: 1rem 0;
+            color: #ffffff;
+            width: 90%;
+            font-family: sans-serif;
+            font-size: 2.5rem;
+            border-radius: 6px;
+            border: 2px solid white;
+            background: rgba(255, 255, 255, 0.219);
+        }
+
+        button {
+            border: none;
+            padding: 0.2rem 2rem;
+            text-decoration: none;
+            background: rgba(255, 255, 255, 0.219);
+            border-radius: 6px;
+            border: 2px solid white;
+            color: #ffffff;
+            width: 90%;
+            font-weight: bold;
+            font-family: sans-serif;
+            font-size: 2.5rem;
+            cursor: pointer;
+            text-align: center;
+            transition: background 250ms ease-in-out, transform 150ms ease;
+            justify-self: flex-end;
+            margin: 1.5rem;
         }
     }
 }
